[gd_scene load_steps=88 format=3 uid="uid://c73cg3qe6bac"]

[ext_resource type="Script" path="res://scripts/vagabond.gd" id="1_38utm"]
[ext_resource type="Texture2D" uid="uid://b32u7uekkyjh0" path="res://assets/vagabond-jump.png" id="1_jqxqu"]
[ext_resource type="Texture2D" uid="uid://cols7pwn3ldtc" path="res://assets/vagabond-idle.png" id="1_rceu7"]
[ext_resource type="Texture2D" uid="uid://gupx0fbnim2r" path="res://assets/vagabond-air-dash.png" id="2_f2wem"]
[ext_resource type="Texture2D" uid="uid://dqyff3kxpejho" path="res://assets/vagabond-jump-attack.png" id="2_p3y5t"]
[ext_resource type="Texture2D" uid="uid://d1qk70y7hkvok" path="res://assets/vagabond-attack.png" id="3_8m6r3"]
[ext_resource type="Texture2D" uid="uid://bthvny68c2v7p" path="res://assets/vagabond-run.png" id="3_86yvy"]
[ext_resource type="Texture2D" uid="uid://vl5tcj7aq43r" path="res://assets/vagabond-dash.png" id="3_411xy"]
[ext_resource type="Texture2D" uid="uid://bhtfaoocjiccv" path="res://assets/vagabond-run-end.png" id="4_4h2rh"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="5_fc70v"]
[ext_resource type="Texture2D" uid="uid://cq2j7xdx346fj" path="res://assets/vagabond-landing-prep-jump.png" id="6_ivyc0"]
[ext_resource type="Script" path="res://scripts/hitbox/HurtBox.gd" id="9_2noqt"]
[ext_resource type="Script" path="res://scripts/InputMovementHandler.gd" id="9_jv11a"]
[ext_resource type="Script" path="res://scripts/PlayerStates/IdleState.gd" id="14_8qnhc"]
[ext_resource type="Script" path="res://scripts/PlayerStates/FallState.gd" id="15_j0k42"]
[ext_resource type="Script" path="res://scripts/PlayerStates/MoveState.gd" id="16_jl6so"]
[ext_resource type="Script" path="res://scripts/PlayerStates/RunStop.gd" id="17_gklgq"]
[ext_resource type="Script" path="res://scripts/hitbox/HitBox.gd" id="17_lwej2"]
[ext_resource type="Script" path="res://scripts/PlayerStates/JumpState.gd" id="18_676ci"]
[ext_resource type="Script" path="res://scripts/PlayerStates/GroundDashState.gd" id="19_u4qrf"]
[ext_resource type="Script" path="res://scripts/HealthHandler.gd" id="20_33qmi"]
[ext_resource type="Script" path="res://scripts/PlayerStates/AttackState.gd" id="20_irsvd"]

[sub_resource type="Animation" id="Animation_t020x"]
resource_name = "Test"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1asyl"]
_data = {
"Test": SubResource("Animation_t020x")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_puylm"]
atlas = ExtResource("2_p3y5t")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wcj3"]
atlas = ExtResource("2_p3y5t")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08qfl"]
atlas = ExtResource("2_p3y5t")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxbcx"]
atlas = ExtResource("2_p3y5t")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmphw"]
atlas = ExtResource("2_p3y5t")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h13s"]
atlas = ExtResource("2_p3y5t")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdxhm"]
atlas = ExtResource("2_p3y5t")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsagp"]
atlas = ExtResource("2_p3y5t")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjxjg"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1024, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4exm6"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1152, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svxyl"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1280, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucao1"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1408, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5re0"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1536, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g2ab"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1664, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_povvy"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1792, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q0xoa"]
atlas = ExtResource("2_p3y5t")
region = Rect2(1920, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpbew"]
atlas = ExtResource("2_f2wem")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttkal"]
atlas = ExtResource("2_f2wem")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wh6y"]
atlas = ExtResource("2_f2wem")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojxco"]
atlas = ExtResource("2_f2wem")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_argg2"]
atlas = ExtResource("3_8m6r3")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd1j0"]
atlas = ExtResource("3_8m6r3")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcnnb"]
atlas = ExtResource("3_8m6r3")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_li33q"]
atlas = ExtResource("3_8m6r3")
region = Rect2(384, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0u0rr"]
atlas = ExtResource("3_8m6r3")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytwco"]
atlas = ExtResource("3_8m6r3")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkc53"]
atlas = ExtResource("3_8m6r3")
region = Rect2(768, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax4i3"]
atlas = ExtResource("3_8m6r3")
region = Rect2(896, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_152aw"]
atlas = ExtResource("3_8m6r3")
region = Rect2(1024, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qelhs"]
atlas = ExtResource("3_8m6r3")
region = Rect2(1152, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vspb2"]
atlas = ExtResource("3_8m6r3")
region = Rect2(1280, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gw4v"]
atlas = ExtResource("3_8m6r3")
region = Rect2(1408, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_acw6m"]
atlas = ExtResource("3_8m6r3")
region = Rect2(1536, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lewt0"]
atlas = ExtResource("3_8m6r3")
region = Rect2(1664, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1w7b"]
atlas = ExtResource("3_8m6r3")
region = Rect2(1792, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmo7e"]
atlas = ExtResource("1_jqxqu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw14t"]
atlas = ExtResource("1_jqxqu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdx1p"]
atlas = ExtResource("6_ivyc0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0qk7"]
atlas = ExtResource("3_411xy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnoxi"]
atlas = ExtResource("3_411xy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6gr"]
atlas = ExtResource("3_411xy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmgoh"]
atlas = ExtResource("3_411xy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7pn3"]
atlas = ExtResource("1_rceu7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlpwy"]
atlas = ExtResource("1_rceu7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ew1aa"]
atlas = ExtResource("1_jqxqu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6lds"]
atlas = ExtResource("3_86yvy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jgqs"]
atlas = ExtResource("3_86yvy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rn3e"]
atlas = ExtResource("3_86yvy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftdm3"]
atlas = ExtResource("3_86yvy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxj4b"]
atlas = ExtResource("3_86yvy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q86yr"]
atlas = ExtResource("3_86yvy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nra8u"]
atlas = ExtResource("3_86yvy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmkcw"]
atlas = ExtResource("3_86yvy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dujjw"]
atlas = ExtResource("4_4h2rh")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ourq5"]
atlas = ExtResource("4_4h2rh")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmq1i"]
atlas = ExtResource("4_4h2rh")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pefo"]
atlas = ExtResource("4_4h2rh")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_2c2qd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_puylm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wcj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08qfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxbcx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmphw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h13s")
}],
"loop": false,
"name": &"AirAttack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdxhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsagp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjxjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4exm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svxyl")
}],
"loop": false,
"name": &"AirAttack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucao1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5re0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g2ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_povvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q0xoa")
}],
"loop": false,
"name": &"AirAttack3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpbew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttkal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wh6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojxco")
}],
"loop": false,
"name": &"AirDash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_argg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd1j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcnnb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li33q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0u0rr")
}],
"loop": false,
"name": &"Attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytwco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkc53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax4i3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_152aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qelhs")
}],
"loop": false,
"name": &"Attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vspb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gw4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acw6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lewt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1w7b")
}],
"loop": false,
"name": &"Attack3",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmo7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw14t")
}],
"loop": false,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdx1p")
}],
"loop": false,
"name": &"FallLand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0qk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnoxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmgoh")
}],
"loop": false,
"name": &"GroundDash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7pn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlpwy")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ew1aa")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6lds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jgqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rn3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftdm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxj4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q86yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nra8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmkcw")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dujjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ourq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmq1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pefo")
}],
"loop": false,
"name": &"RunStop",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3x4ll"]
size = Vector2(5, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vhkh"]
size = Vector2(49, 20)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_63ikj"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 3, 1)
gravity = Vector3(0, 10, 0)
scale_max = 3.0
color = Color(0.802191, 0.802191, 0.802191, 1)

[sub_resource type="Gradient" id="Gradient_mmct0"]
offsets = PackedFloat32Array(0, 0.712)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ax41b"]
gradient = SubResource("Gradient_mmct0")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Player" type="CharacterBody2D"]
collision_layer = 133
script = ExtResource("1_38utm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1asyl")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_2c2qd")
animation = &"Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 21.5)
shape = SubResource("RectangleShape2D_3x4ll")

[node name="HurtBox" type="Area2D" parent="." node_paths=PackedStringArray("collision_shape")]
collision_layer = 2
collision_mask = 0
script = ExtResource("9_2noqt")
collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.5, 21.5)
shape = SubResource("RectangleShape2D_3x4ll")

[node name="HitBox" type="Area2D" parent="." node_paths=PackedStringArray("collision_shape")]
collision_layer = 32
collision_mask = 0
script = ExtResource("17_lwej2")
collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(21.5, 21)
shape = SubResource("RectangleShape2D_2vhkh")
disabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("sprite", "walk_particles")]
script = ExtResource("5_fc70v")
sprite = NodePath("../AnimatedSprite2D")
walk_particles = NodePath("../GPUParticles2D")
jump_height = 35.0
jump_time_to_peak = 0.35
jump_time_to_descent = 0.3
jump_distance = 120.0
acceleration = 0.15
dash_force = 680

[node name="IdleState" type="Node" parent="StateMachine"]
script = ExtResource("14_8qnhc")

[node name="FallState" type="Node" parent="StateMachine"]
script = ExtResource("15_j0k42")

[node name="MoveState" type="Node" parent="StateMachine"]
script = ExtResource("16_jl6so")

[node name="RunStopState" type="Node" parent="StateMachine"]
script = ExtResource("17_gklgq")

[node name="JumpState" type="Node" parent="StateMachine"]
script = ExtResource("18_676ci")

[node name="GroundDashState" type="Node" parent="StateMachine" node_paths=PackedStringArray("timer")]
script = ExtResource("19_u4qrf")
timer = NodePath("Timer")

[node name="Timer" type="Timer" parent="StateMachine/GroundDashState"]
wait_time = 0.05
one_shot = true

[node name="AttackState" type="Node" parent="StateMachine" node_paths=PackedStringArray("hitbox")]
script = ExtResource("20_irsvd")
hitbox = NodePath("../../HitBox")
attack_shift = 50

[node name="InputMovementHandler" type="Node" parent="." node_paths=PackedStringArray("state_machine", "ray_cast")]
script = ExtResource("9_jv11a")
state_machine = NodePath("../StateMachine")
ray_cast = NodePath("../RayCast2D")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
z_index = 3
position = Vector2(-1, 31)
rotation = 1.5708
amount = 10
process_material = SubResource("ParticleProcessMaterial_63ikj")
trail_lifetime = 0.2

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 32)
target_position = Vector2(0, 6)

[node name="HealthHandler" type="Node" parent="."]
script = ExtResource("20_33qmi")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(2.38419e-07, 15)
scale = Vector2(1.3, 1.3)
color = Color(0.9372, 0.435023, 0.410348, 1)
energy = 1.5
texture = SubResource("GradientTexture2D_ax41b")
